# json-indent

./: .bumpver-pre-commit-hook.sh  .bumpversion.cfg  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  DEVELOPING.md  LICENSE  README.md  VERSION  bumpver.toml  cookiecutter-config.yaml  invoke.yaml  json-indent  prospector_profile.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py  taskutil.py
.github/workflows/: build.yaml
dev/: requirements_dev.txt
examples/: .pre-commit-config.yaml  install-venv-dev.sh  install-venv.sh  pre-commit-config.yaml
json_indent/: __init__.py  iofile.py  json_indent.py  pyversion.py
src/json_indent/: __init__.py  __main__.py  completion.py  iofile.py  json_indent.py  util.py
tests/: .ruff.toml  README.md  __init__.py
tests/json_indent/: test_iofile.py  test_json_indent.py  test_pyversion.py  test_textiofile.py  test_util.py
util/: build-docs.sh  git-flow-init.py  sync-requirements.py  tag-version.py  update-version.py
util/pre-commit-tools/: install-hooks.sh  run-hooks.sh  run-manual-hooks.sh  seed-hook-config.py  seed-hook-config.sh  update-hooks.sh
