[project]
name = "json-indent"
version = "2.7.5"
description = "Simple Python-based JSON parser/indenter/formatter"
readme = "README.md"
authors = [
    { name = "jmknoble", email = "jmknoble@pobox.com" }
]
license = { file = "LICENSE" }
keywords = [
    "cli",
    "indent",
    "json",
    "pre-commit",
    "reformat",
]
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=1.12.3",
]

[project.urls]
Repository = "https://github.com/jmknoble/json-indent"

[project.scripts]
json-indent = "json_indent.json_indent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "invoke>=2.2.0",
    "pre-commit-tool>=0.1.6",
    "ruff>=0.7.2",
    "sphinx>=3.0.4,<4",
]

[tool.hatch.build.targets.sdist]
# https://hatch.pypa.io/latest/config/build/#file-selection
#
# include = []
exclude = [
    ".[!.]*",
    "DEVELOPING.md",
    "build",
    "dist",
    "docs",
    "examples",
    "tests",
    "tests.*",
    "util",
    "*.egg-info",
]
